[package]
name = "ndarray-image"
version = "0.2.0"
authors = ["Geordon Worley <vadixidav@gmail.com>"]
edition = "2018"
description = "Zero-copy conversion between ndarray and image crates"
keywords = ["ndarray", "image", "conversion"]
categories = ["multimedia::images"]
repository = "https://github.com/rust-photogrammetry/ndarray-image"
documentation = "https://docs.rs/ndarray-image/"
license = "MIT"
readme = "README.md"

[dependencies]
image = { version = "0.23.2", default-features = false }
ndarray = { version = "0.13.0", default-features = false }

[dev-dependencies]
structopt = "0.3.12"
image = "0.23.2"

