[package]
name = "ndarray-image"
version = "0.3.1-alpha.0"
authors = ["Geordon Worley <vadixidav@gmail.com>"]
edition = "2018"
description = "Zero-copy conversion between ndarray and image crates"
keywords = ["ndarray", "image", "conversion"]
categories = ["multimedia::images"]
repository = "https://github.com/rust-cv/ndarray-image"
documentation = "https://docs.rs/ndarray-image/"
license = "MIT"
readme = "README.md"

[dependencies]
image = { version = "0.23.12", default-features = false }
ndarray = { version = "0.15.3", default-features = false }

[dev-dependencies]
structopt = "0.3.21"
image = "0.23.12"

